fixed hero for dark mode

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -84,6 +84,8 @@ footer#document-footer
     opacity: 1
 
 @media (prefers-color-scheme: dark)
+    .hero
+        background: transparent
     .nav-accessibility a
         color: $color-accent
     .categories__term .posts--list .post a
